// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interpreters for field can get raw fact details 1`] = `
{
  "type": "string",
}
`;

exports[`interpreters for field get locations from json paths 1`] = `
{
  "contentType": "application/xml",
  "location": "response",
  "method": "get",
  "pathPattern": "/user/login",
  "statusCode": "200",
  "trail": [
    "schema",
    "properties",
    "id",
  ],
}
`;

exports[`interpreters for operation can get raw fact details 1`] = `
{
  "description": "This can only be done by the logged in user.",
  "operationId": "createUser",
  "parameters": [
    {
      "description": "something",
      "in": "query",
      "name": "seomthing",
      "required": true,
      "schema": {
        "type": "string",
      },
    },
    {
      "description": "something",
      "in": "query",
      "name": "somethingelse",
      "required": true,
      "schema": {
        "type": "string",
      },
    },
  ],
  "requestBody": {
    "content": {
      "*/*": {
        "examples": {
          "Pet": {
            "email": "pet@store.com",
            "firstName": "mr",
            "id": 123,
            "lastName": "pet",
            "password": "secret",
            "phone": "123456789",
            "userStatus": "active",
            "username": "mr-pet",
          },
        },
        "schema": {
          "properties": {
            "email": {
              "type": "string",
            },
            "firstName": {
              "type": "string",
            },
            "id": {
              "format": "int64",
              "type": "integer",
            },
            "lastName": {
              "type": "string",
            },
            "password": {
              "type": "string",
            },
            "phone": {
              "type": "string",
            },
            "userStatus": {
              "description": "User Status",
              "type": "string",
            },
            "username": {
              "type": "string",
            },
          },
          "required": [
            "id",
            "username",
            "firstName",
            "lastName",
            "email",
            "password",
            "phone",
          ],
          "type": "object",
          "xml": {
            "name": "User",
          },
        },
      },
    },
    "description": "Created user object",
    "required": true,
  },
  "responses": {
    "default": {
      "content": {},
      "description": "successful operation",
    },
  },
  "summary": "Create user",
  "tags": [
    "user",
  ],
  "x-codegen-request-body-name": "body",
  "x-maturity": "stable",
}
`;

exports[`interpreters for operation get locations from json paths 1`] = `
{
  "method": "post",
  "pathPattern": "/user",
}
`;

exports[`interpreters for request-query can get raw fact details 1`] = `
{
  "description": "The password for login in clear text",
  "in": "query",
  "name": "password",
  "required": true,
  "schema": {
    "type": "string",
  },
}
`;

exports[`interpreters for request-query get locations from json paths 1`] = `
{
  "method": "get",
  "pathPattern": "/user/login",
}
`;

exports[`interpreters for requestBody can get raw fact details 1`] = `
{
  "content": {
    "*/*": {
      "examples": {
        "Pet": {
          "email": "pet@store.com",
          "firstName": "mr",
          "id": 123,
          "lastName": "pet",
          "password": "secret",
          "phone": "123456789",
          "userStatus": "active",
          "username": "mr-pet",
        },
      },
      "schema": {
        "properties": {
          "email": {
            "type": "string",
          },
          "firstName": {
            "type": "string",
          },
          "id": {
            "format": "int64",
            "type": "integer",
          },
          "lastName": {
            "type": "string",
          },
          "password": {
            "type": "string",
          },
          "phone": {
            "type": "string",
          },
          "userStatus": {
            "description": "User Status",
            "type": "string",
          },
          "username": {
            "type": "string",
          },
        },
        "required": [
          "id",
          "username",
          "firstName",
          "lastName",
          "email",
          "password",
          "phone",
        ],
        "type": "object",
        "xml": {
          "name": "User",
        },
      },
    },
  },
  "description": "Created user object",
  "required": true,
}
`;

exports[`interpreters for requestBody get locations from json paths 1`] = `
{
  "method": "post",
  "pathPattern": "/user",
}
`;

exports[`interpreters for response can get raw fact details 1`] = `
{
  "content": {},
  "description": "successful operation",
}
`;

exports[`interpreters for response get locations from json paths 1`] = `
{
  "method": "post",
  "pathPattern": "/user",
  "statusCode": "default",
}
`;

exports[`interpreters for response-header can get raw fact details 1`] = `
{
  "description": "calls per hour allowed by the user",
  "schema": {
    "format": "int32",
    "type": "integer",
  },
}
`;

exports[`interpreters for response-header get locations from json paths 1`] = `
{
  "headerName": "X-Rate-Limit",
  "method": "get",
  "pathPattern": "/user/login",
  "statusCode": "200",
}
`;

exports[`interpreters for specification can get raw fact details 1`] = `
{
  "info": {
    "description": "This is a sample server Petstore server.  You can find out more about     Swagger at [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/).      For thiasds sample, you can use the api key \`special-key\` to test the authorization     filters.",
    "title": "Swagger Petstore 1",
    "version": "1.0.1",
  },
  "openapi": "3.0.1",
  "paths": {
    "/user": {
      "post": {
        "description": "This can only be done by the logged in user.",
        "operationId": "createUser",
        "parameters": [
          {
            "description": "something",
            "in": "query",
            "name": "seomthing",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "description": "something",
            "in": "query",
            "name": "somethingelse",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "*/*": {
              "examples": {
                "Pet": {
                  "email": "pet@store.com",
                  "firstName": "mr",
                  "id": 123,
                  "lastName": "pet",
                  "password": "secret",
                  "phone": "123456789",
                  "userStatus": "active",
                  "username": "mr-pet",
                },
              },
              "schema": {
                "properties": {
                  "email": {
                    "type": "string",
                  },
                  "firstName": {
                    "type": "string",
                  },
                  "id": {
                    "format": "int64",
                    "type": "integer",
                  },
                  "lastName": {
                    "type": "string",
                  },
                  "password": {
                    "type": "string",
                  },
                  "phone": {
                    "type": "string",
                  },
                  "userStatus": {
                    "description": "User Status",
                    "type": "string",
                  },
                  "username": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                  "username",
                  "firstName",
                  "lastName",
                  "email",
                  "password",
                  "phone",
                ],
                "type": "object",
                "xml": {
                  "name": "User",
                },
              },
            },
          },
          "description": "Created user object",
          "required": true,
        },
        "responses": {
          "default": {
            "content": {},
            "description": "successful operation",
          },
        },
        "summary": "Create user",
        "tags": [
          "user",
        ],
        "x-codegen-request-body-name": "body",
        "x-maturity": "stable",
      },
    },
    "/user/login": {
      "get": {
        "operationId": "loginUser",
        "parameters": [
          {
            "description": "The user name for login",
            "in": "query",
            "name": "username",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
          {
            "description": "The password for login in clear text",
            "in": "query",
            "name": "password",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string",
                },
              },
              "application/xml": {
                "schema": {
                  "properties": {
                    "id": {
                      "type": "string",
                    },
                    "name": {
                      "type": "string",
                    },
                    "status": {
                      "properties": {
                        "lastLogin": {
                          "type": "string",
                        },
                      },
                      "required": [
                        "lastLogin",
                      ],
                      "type": "object",
                    },
                  },
                  "required": [
                    "name",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "successful operation",
            "headers": {
              "X-Expires-After": {
                "description": "date in UTC when token expires",
                "schema": {
                  "format": "date-time",
                  "type": "string",
                },
              },
              "X-Rate-Limit": {
                "description": "calls per hour allowed by the user",
                "schema": {
                  "format": "int32",
                  "type": "integer",
                },
              },
            },
          },
          "400": {
            "content": {},
            "description": "Invalid username/password supplied",
          },
        },
        "summary": "Logs user into the system",
        "tags": [
          "user",
        ],
        "x-maturity": "wip",
      },
    },
    "/user/logout": {
      "get": {
        "operationId": "logoutUser",
        "responses": {
          "default": {
            "content": {},
            "description": "successful operation",
          },
        },
        "summary": "Logs out current logged in user session",
        "tags": [
          "user",
        ],
        "x-maturity": "wip",
      },
    },
    "/user/{username}": {
      "delete": {
        "description": "This can only be done by the logged in user.",
        "operationId": "deleteUser",
        "parameters": [
          {
            "description": "The name that needs to be deleted",
            "in": "path",
            "name": "username",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "400": {
            "content": {},
            "description": "Invalid username supplied",
          },
          "404": {
            "content": {},
            "description": "User not found",
          },
        },
        "summary": "Delete user",
        "tags": [
          "user",
        ],
        "x-maturity": "wip",
      },
      "get": {
        "operationId": "getUserByName",
        "parameters": [
          {
            "description": "The name that needs to be fetched. Use user1 for testing. ",
            "in": "path",
            "name": "username",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "email": {
                      "type": "string",
                    },
                    "firstName": {
                      "type": "string",
                    },
                    "id": {
                      "format": "int64",
                      "type": "integer",
                    },
                    "lastName": {
                      "type": "string",
                    },
                    "password": {
                      "type": "string",
                    },
                    "phone": {
                      "type": "string",
                    },
                    "userStatus": {
                      "description": "User Status",
                      "format": "int32",
                      "type": "integer",
                    },
                    "username": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "username",
                    "firstName",
                    "lastName",
                    "email",
                    "password",
                    "phone",
                  ],
                  "type": "object",
                  "xml": {
                    "name": "User",
                  },
                },
              },
              "application/xml": {
                "schema": {
                  "properties": {
                    "email": {
                      "type": "string",
                    },
                    "firstName": {
                      "type": "string",
                    },
                    "id": {
                      "format": "int64",
                      "type": "integer",
                    },
                    "lastName": {
                      "type": "string",
                    },
                    "password": {
                      "type": "string",
                    },
                    "phone": {
                      "type": "string",
                    },
                    "userStatus": {
                      "description": "User Status",
                      "format": "int32",
                      "type": "integer",
                    },
                    "username": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "id",
                    "username",
                    "firstName",
                    "lastName",
                    "email",
                    "password",
                    "phone",
                  ],
                  "type": "object",
                  "xml": {
                    "name": "User",
                  },
                },
              },
            },
            "description": "successful operation",
          },
          "400": {
            "content": {},
            "description": "Invalid username supplied",
          },
          "404": {
            "content": {},
            "description": "User not found",
          },
        },
        "summary": "Get user by user name",
        "tags": [
          "user",
        ],
        "x-maturity": "wip",
      },
      "patch": {
        "description": "This can only be done by the logged in user.",
        "operationId": "updateUser",
        "parameters": [
          {
            "description": "name that need to be updated",
            "in": "path",
            "name": "username",
            "required": true,
            "schema": {
              "type": "string",
            },
          },
        ],
        "requestBody": {
          "content": {
            "*/*": {
              "schema": {
                "properties": {
                  "email": {
                    "type": "string",
                  },
                  "firstName": {
                    "type": "string",
                  },
                  "id": {
                    "format": "int64",
                    "type": "integer",
                  },
                  "lastName": {
                    "type": "string",
                  },
                  "password": {
                    "type": "string",
                  },
                  "phone": {
                    "type": "string",
                  },
                  "userStatus": {
                    "description": "User Status",
                    "format": "int32",
                    "type": "integer",
                  },
                  "username": {
                    "type": "string",
                  },
                },
                "required": [
                  "id",
                  "username",
                  "firstName",
                  "lastName",
                  "email",
                  "password",
                  "phone",
                ],
                "type": "object",
                "xml": {
                  "name": "User",
                },
              },
            },
          },
          "description": "Updated user object",
          "required": true,
        },
        "responses": {
          "400": {
            "content": {},
            "description": "Invalid user supplied",
          },
          "404": {
            "content": {},
            "description": "User not found",
          },
        },
        "summary": "Updated user",
        "tags": [
          "user",
        ],
        "x-codegen-request-body-name": "body",
        "x-maturity": "wip",
      },
    },
  },
}
`;

exports[`interpreters for specification get locations from json paths 1`] = `{}`;

exports[`traversing a spec can traverse a spec (./inputs/openapi3/polymorphic-schemas.json) 1`] = `
[
  {
    "location": {
      "jsonPath": "",
    },
    "type": "specification",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example",
    },
    "type": "path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/stringOrNumberOrObject",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/stringOrNumberOrObject/oneOf/2/properties/orderId",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/composedObject",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/composedObject/allOf/0/properties/orderId",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/composedObject/allOf/1/properties/fulfillmentId",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject/anyOf/0/properties/orderId",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject/anyOf/1/properties/order",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject/anyOf/1/properties/order/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200",
    },
    "type": "response",
  },
]
`;

exports[`traversing a spec can traverse a spec (./inputs/openapi3/polymorphic-schemas-3_1.json) 1`] = `
[
  {
    "location": {
      "jsonPath": "",
    },
    "type": "specification",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example",
    },
    "type": "path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/stringOrNumberOrObject",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/stringOrNumberOrObject/oneOf/2/properties/orderId",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/composedObject",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/composedObject/allOf/0/properties/orderId",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/composedObject/allOf/1/properties/fulfillmentId",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject/anyOf/0/properties/orderId",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject/anyOf/1/properties/order",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200/content/application~1json/schema/properties/expandableObject/anyOf/1/properties/order/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1example/get/responses/200",
    },
    "type": "response",
  },
]
`;

exports[`traversing a spec can traverse a spec (./inputs/openapi3/smallpetstore0.json) 1`] = `
[
  {
    "location": {
      "jsonPath": "",
    },
    "type": "specification",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user",
    },
    "type": "path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/parameters/0",
    },
    "type": "request-query",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/username",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/firstName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/lastName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/email",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/password",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/phone",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/userStatus",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody",
    },
    "type": "requestBody",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/responses/default",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login",
    },
    "type": "path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/parameters/0",
    },
    "type": "request-query",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/parameters/1",
    },
    "type": "request-query",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/headers/X-Rate-Limit",
    },
    "type": "response-header",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/headers/X-Expires-After",
    },
    "type": "response-header",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml/schema/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml/schema/properties/status",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml/schema/properties/status/properties/lastLogin",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1json",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/400",
    },
    "type": "response",
  },
]
`;

exports[`traversing a spec can traverse a spec (./inputs/openapi3/smallpetstore1.json) 1`] = `
[
  {
    "location": {
      "jsonPath": "",
    },
    "type": "specification",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user",
    },
    "type": "path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/parameters/0",
    },
    "type": "request-query",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/parameters/1",
    },
    "type": "request-query",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/username",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/firstName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/lastName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/email",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/password",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/phone",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/schema/properties/userStatus",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/examples",
    },
    "type": "body-examples",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody/content/*~1*/examples/Pet",
    },
    "type": "body-example",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/requestBody",
    },
    "type": "requestBody",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user/post/responses/default",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login",
    },
    "type": "path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/parameters/0",
    },
    "type": "request-query",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/parameters/1",
    },
    "type": "request-query",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/headers/X-Rate-Limit",
    },
    "type": "response-header",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/headers/X-Expires-After",
    },
    "type": "response-header",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml/schema/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml/schema/properties/status",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml/schema/properties/status/properties/lastLogin",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1xml/schema/properties/name",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200/content/application~1json",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/200",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1login/get/responses/400",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1logout",
    },
    "type": "path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1logout/get",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1logout/get/responses/default",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}",
    },
    "type": "path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/parameters/0",
    },
    "type": "request-path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml/schema/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml/schema/properties/username",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml/schema/properties/firstName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml/schema/properties/lastName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml/schema/properties/email",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml/schema/properties/password",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml/schema/properties/phone",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1xml/schema/properties/userStatus",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json/schema/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json/schema/properties/username",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json/schema/properties/firstName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json/schema/properties/lastName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json/schema/properties/email",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json/schema/properties/password",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json/schema/properties/phone",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200/content/application~1json/schema/properties/userStatus",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/200",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/400",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/get/responses/404",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/parameters/0",
    },
    "type": "request-path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*",
    },
    "type": "body",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*/schema/properties/id",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*/schema/properties/username",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*/schema/properties/firstName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*/schema/properties/lastName",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*/schema/properties/email",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*/schema/properties/password",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*/schema/properties/phone",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody/content/*~1*/schema/properties/userStatus",
    },
    "type": "field",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/requestBody",
    },
    "type": "requestBody",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/responses/400",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/patch/responses/404",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/delete",
    },
    "type": "operation",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/delete/parameters/0",
    },
    "type": "request-path",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/delete/responses/400",
    },
    "type": "response",
  },
  {
    "location": {
      "jsonPath": "/paths/~1user~1{username}/delete/responses/404",
    },
    "type": "response",
  },
]
`;
